specs/blueprints/errors/validation/missing_fieldset.eno
# Querying a section for a required but missing fieldset 

-- input
# section
-- input

-- javascript
enolib.parse(input).section('section').requiredFieldset('fieldset');
-- javascript

-- php
Enolib\Parser::parse($input)->section('section')->requiredFieldset('fieldset');
-- php

-- python
enolib.parse(input).section('section').required_fieldset('fieldset')
-- python

-- ruby
Enolib.parse(input).section('section').required_fieldset('fieldset')
-- ruby

## ValidationError

-- text
The fieldset 'fieldset' is missing - in case it has been specified look for typos and also check for correct capitalization.
-- text

-- snippet
   Line | Content
 *    1 | # section
-- snippet

selection: [0,9] => [0,9]
